# se-scope-demo

./: .gitignore  README.md
ccstudio-f28069-c2000-nortos/: .cproject  .project  F2806x_Sci.c  UartDriver.c  UartDriver.h  main.c
ccstudio-f28069-c2000-nortos/.launches/: ccs-ti-F28069.launch
ccstudio-f286069-c2000-nortos/: .cproject  28069_RAM_lnk.cmd  main.c
ccstudio-f286069-c2000-nortos/.launches/: ccstudio-f286069-c2000-nortos.launch
ccstudio-f286069-c2000-nortos/Include/se-lib-c/definition/: SeLibCTypes.h
ccstudio-f286069-c2000-nortos/Include/se-lib-c/osal/: IMutex.h
ccstudio-f286069-c2000-nortos/Include/se-lib-c/stream/: BufferedByteStream.h  BufferedFloatStream.h  BufferedIntStream.h  IByteStream.h  IFloatStream.h  IIntStream.h  ThreadSafeByteStream.h
cmake-raspi-aarch32-linux/: CMakeLists.txt
cmake-raspi-aarch32-linux/inc/: LinuxMutex.h  Server.h  TcpServer.h  UartDriver.h
cmake-raspi-aarch32-linux/inc/Communication/: Communicator.h  UartCommunicator.h
cmake-raspi-aarch32-linux/inc/Communication/UART/: uart.h
cmake-raspi-aarch32-linux/src/: LinuxMutex.c  Server.cpp  TcpServer.cpp  UartDriver.cpp  main.cpp
cmake-raspi-aarch32-linux/src/Communication/: Communicator.cpp  UartCommunicator.cpp
cmake-raspi-aarch32-linux/src/Communication/UART/: uart.c
cmake-raspi-armhf-linux/: CMakeLists.txt
cmake-raspi-armhf-linux/inc/: TcpServer.h
cmake-raspi-armhf-linux/src/: LinuxMutex.cpp  Server.cpp  main.cpp
cubeIDE-nucleo-g0-rtos/: .cproject  .mxproject  .project  README.md  STM32G071RBTX_FLASH.ld  nucleo-g0-rtos Debug.launch  nucleo-g0-rtos.ioc
cubeIDE-nucleo-g0-rtos/Core/Inc/: FreeRTOSConfig.h  RtosApplication.h  RtosMutex.h  UartDriver.h  main.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h  usart.h
cubeIDE-nucleo-g0-rtos/Core/Src/: RtosApplication.c  adc.c  app_freertos.c  gpio.c  main.c  main.c.bak  stm32g0xx_hal_msp.c  stm32g0xx_hal_timebase_tim.c  stm32g0xx_it.c  usart.c
keil-nucleo-g0-rtos/: .gitignore  .mxproject  README.md  nucleo-g0-rtos.ioc  scope-g0.uvmpw
keil-nucleo-g0-rtos/Inc/: FreeRTOSConfig.h  RtosApplication.h  RtosMutex.h  main.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h  usart.h
keil-nucleo-g0-rtos/MDK-ARM/: nucleo-g0-rtos.uvguix.buehlerf  nucleo-g0-rtos.uvguix.schuepbs  nucleo-g0-rtos.uvoptx  nucleo-g0-rtos.uvprojx  startup_stm32g071xx.lst  startup_stm32g071xx.s
keil-nucleo-g0-rtos/MDK-ARM/RTE/_nucleo-g0/: RTE_Components.h
keil-nucleo-g0-rtos/MDK-ARM/RTE/_nucleo-g0-rtos/: RTE_Components.h
keil-nucleo-g0-rtos/STM32G0xx_Nucleo/: stm32g0xx_nucleo.c  stm32g0xx_nucleo.h
keil-nucleo-g0-rtos/Src/: RtosApplication.c  RtosMutex.c  UartDriver.c  adc.c  app_freertos.c  main.c  stm32g0xx_hal_msp.c  stm32g0xx_hal_timebase_tim.c  stm32g0xx_it.c  usart.c
se-scope-target/: README.md
se-scope-target/ext/se-lib-c/public/se-lib-c/stream/: IByteStream.h  IFloatStream.h
se-scope-target/lib/aarch32-linux/: README.txt
se-scope-target/lib/c2000/: se-scope-target.lib
se-scope-target/lib/stm32-g0/: scope-lib-stm32-g0.lib
se-scope-target/public/Scope/Builders/: ScopeFramedStack.h
se-scope-target/public/Scope/Communication/: ITransceiver.h
se-scope-target/public/se-lib-c/container/: ByteRingBuffer.h
se-scope-target/public/se-lib-c/definition/: SeLibCTypes.h
se-scope-target/public/se-lib-c/osal/: IMutex.h
se-scope-target/public/se-lib-c/stream/: BufferedByteStream.h  IByteStream.h  IIntStream.h
